--------- version history of Open-Console-Owner

version 0.04:

	Fixes:
	- minor contract typos.
	- reset procedure email handling.
	- html title of public pages.

	Improvements:
	- fork some programming instructions off to core.
	- move appSessions table to connect repo.
	- move database logic for connect to its repo, with minimal integration.
	- cleanup of login pages.
	- Comply

version 0.03: Sat 28 Sep 13:06:29 CEST 2024

	Improvements:
	- new form for Service definition.
	- Contract signing.

version 0.02: Wed 18 Sep 14:49:00 CEST 2024

	Fixes:
	- fix show_trace on error
	- fix website dns proof domain-suffix issues

	Improvements:
	- website-url check starts on <enter>
	- friendlier delete message
	- add Contracts and Services
	- move to new 'id' policy of core
	- use $obj->isNew
	- move to new proof manager "assets"
	- first go with the service form

version 0.01: Wed 09 Sep 12:07:38 CEST 2024
	- initial release