@@ -121,20 +121,6 @@
   <p>When you specify a new <strong>email-address</strong> here, you
   will be asked to verify it.</p>
 
-  <div class="history history-new" for="email" data-schema="20240101" data-reason="new">
-    First test, just because I can.
-  </div>
-  <div class="history history-change" for="email" data-schema="20240102" data-reason="change">
-    The possibilities of this field have been extended.  Also, the email address gets a more
-    strict validation.
-  </div>
-  <div class="history history-deprecate" for="email" data-schema="20240102" data-reason="deprecated">
-    This field will disappear soon.  Messages will be send via WhatsApp from now on.
-  </div>
-
-  <div class="history history-new" for="avatar" data-schema="20230101">
-    Don't show this.
-  </div>
 % end
 
 % push @pages, [
